# Coursework

./: CMakeLists.txt  camera.h  example.ply  fragment_shader.glsl  mainwindow.cpp  mainwindow.h  scene.cpp  scene.h  vertex_shader.glsl  viewer.cpp  viewer.h
